added responsive design to projects

--- a/projects.html
+++ b/projects.html
@@ -38,9 +38,11 @@
     <h2 class="project-title">Markdown Preview</h2>
     <p class="project-description">The Markdown Preview web app simply converts a user string into markdown text. Markdown text is a shorthand way of defining
       certain html contents. If the user types in '# testing', it will display 'testing' using the h1 stylings. There have been many iterations of this website. The most recent update took away the 'render' button. In its place, the text will automatically render on <i>keyup</i>.</p>
-    <a href="./projects/markdown/markdown.html">
+      <div class="project-image">
+      <a href="./projects/markdown/markdown.html">
       <img class="projectImage" src="images/MarkdownScreenshot.JPG" title="Markdown Preview Screenshot">
     </a>
+    </div>
   </div>
 
   <hr>
@@ -49,9 +51,11 @@
     <h2 class="project-title">Pick a Number</h2>
     <p class="project-description">The Pick a Number web app will ask you to guess a number from 1-100. Then you will tell the computer if your number is
       higher or lower. Eventually the computer will guess your number!</p>
-    <a href="./projects/guess/guess.html">
+      <div class="project-image">
+      <a href="./projects/guess/guess.html">
       <img class="projectImage" src="images/guess.jpg" title="Pick a Number Screenshot">
     </a>
+    </div>
   </div>
 
   <hr>
@@ -59,26 +63,28 @@
     <h2 class="project-title">Guess my Number</h2>
     <p class="project-description">Its the opposite of 'Pick a Number'. In this web app, you will try to guess the computer's number between 1-100. How
       quickly can you guess the computers number?!</p>
-    <a href="./projects/numberfinder/numberFinder.html">
+      <div class="project-image">
+      <a href="./projects/numberfinder/numberFinder.html">
       <img class="projectImage" src="images/findnumberscreenshot.JPG" title="Find A Number Screenshot">
     </a>
+    </div>
   </div>
   <hr>
   <div class="projectsGrid">
     <h2 class="project-title">Pomodoro Timers</h2>
     <p class="project-description">We were tasked with creating a timer that could be used to monitor time on task and set reasonable time goals. This timer can be set using the seconds, minutes, hours, up to 12 hours, 59 minutes, and 59 seconds.</p>
-    <a href="projects/tomatotimer/timer.html">
+    <div class="project-image">
+      <a href="projects/tomatotimer/timer.html">
       <img class="projectImage" src="images/timer.JPG" title="Pomodoro Timer Screenshot">
-    </a>
+      </a>
+    </div>
   </div>
   <hr>
   <div class="projectsGrid">
-      <h2 class="project-title">Yelpington</h2>
-      <p class="project-description">The Yelpington app is designed to use AJAX and JSON files to populate a website with restaurant information and location. The app uses "Open Street Maps API" to display a map of the area surrounding the restaurent in question as well as a marker over its exact location. Given that a server is required there is currently no access to this app.</p>
-  
-        <img class="projectImage" src="images/yelpington.JPG" title="Yelpington Project Screenshot">
-
-    </div>
+    <h2 class="project-title">Yelpington</h2>
+    <p class="project-description">The Yelpington app is designed to use AJAX and JSON files to populate a website with restaurant information and location. The app uses "Open Street Maps API" to display a map of the area surrounding the restaurent in question as well as a marker over its exact location. Given that a server is required there is currently no access to this app.</p>
+    <img class="projectImage" src="images/yelpington.JPG" title="Yelpington Project Screenshot">
+  </div>
 
   <footer>
     <table>
